// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionList renders actions correctly 1`] = `
<div
  className="ActionList"
  style={
    Object {
      "maxHeight": "none",
    }
  }
>
  <Section
    key="0"
    section={
      Array [
        Object {
          "content": "Action",
        },
        Object {
          "content": "Action 2",
          "selected": true,
        },
      ]
    }
  />
</div>
`;

exports[`ActionList renders actions correctly 2`] = `
<div
  className="Section"
>
  <UnstyledLink
    className="Action"
    key="0"
  >
    Action
  </UnstyledLink>
  <UnstyledLink
    className="Action"
    key="1"
  >
    <span>
      Action 2
      <Check
        className="Check"
        size={21}
      />
    </span>
  </UnstyledLink>
</div>
`;

exports[`ActionList renders sections correctly 1`] = `
<div
  className="ActionList"
  style={
    Object {
      "maxHeight": "none",
    }
  }
>
  <Section
    key="0"
    section={
      Array [
        Object {
          "content": "Sectioned1",
        },
        Object {
          "content": "Sectioned2",
        },
      ]
    }
  />
  <Section
    key="1"
    section={
      Array [
        Object {
          "content": "Sectioned3",
        },
        Object {
          "content": "Sectioned4",
        },
      ]
    }
  />
</div>
`;

exports[`ActionList renders sections correctly using a group by key 1`] = `
<div
  className="ActionList"
  style={
    Object {
      "maxHeight": "none",
    }
  }
>
  <Section
    key="0"
    section={
      Array [
        Object {
          "content": "Sectioned1",
          "section": 1,
        },
        Object {
          "content": "Sectioned2",
          "section": 1,
        },
      ]
    }
  />
  <Section
    key="1"
    section={
      Array [
        Object {
          "content": "Sectioned3",
          "section": 2,
        },
        Object {
          "content": "Sectioned4",
          "section": 2,
        },
      ]
    }
  />
</div>
`;

exports[`ActionList renders sections with actions and max height correctly 1`] = `
<div
  className="ActionList"
  style={
    Object {
      "maxHeight": 50,
    }
  }
>
  <Section
    key="0"
    section={
      Array [
        Object {
          "content": "Action1",
        },
        Object {
          "content": "Action2",
        },
      ]
    }
  />
  <Section
    key="1"
    section={
      Array [
        Object {
          "content": "Sectioned1",
        },
        Object {
          "content": "Sectioned2",
        },
      ]
    }
  />
  <Section
    key="2"
    section={
      Array [
        Object {
          "content": "Sectioned3",
        },
        Object {
          "content": "Sectioned4",
        },
      ]
    }
  />
</div>
`;
